Building a Mixin for Buttons

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <p class="regular">$200</p>
                     <p class="offer">$15</p>
                 </div>
-                <a href="#" class="button"">Add to Cart</a>
+                <a href="#" class="button">Add to Cart</a>
             </div>
         </div> <!--.course-->
         <div class=" course">
@@ -206,7 +206,7 @@
                             <p class="regular">$200</p>
                             <p class="offer">$15</p>
                         </div>
-                        <a href="#" class="button"">Add to Cart</a>
+                        <a href="#" class="button">Add to Cart</a>
             </div>
         </div> <!--.course-->
         <div class=" course">
@@ -219,7 +219,7 @@
                                     <p class="regular">$200</p>
                                     <p class="offer">$15</p>
                                 </div>
-                                <a href="#" class="button"">Add to Cart</a>
+                                <a href="#" class="button">Add to Cart</a>
             </div>
         </div> <!--.course-->
     </div>  <!--.course-list-->
