Working with the Main Features Section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="cart-content">
             <img src="img/cart.png" class="img-cart">
             <div class="content hidden">
-                <table id="cart-list" class="">
+                <table id="cart-list">
                     <thead>
                         <tr>
                             <th>Image</th>
@@ -44,11 +44,11 @@
 
     <div class="hero">
         <div class="hero-content container">
-            <h2>Aprende algo nuevo</h2>
-            <p>Todos los course-list a $15</p>
+            <h2>Learn Something New</h2>
+            <p>Invest in yourself with courses from just $15</p>
             <form action="#" method="post">
-                <input class="" type="text" placeholder="¿Que te gustaría Aprender?" id="buscador">
-                <input type="submit" id="submit-buscador" class="submit-buscador">
+                <input type="text" placeholder="What do you want to learn?">
+                <input type="submit" class="submit">
             </form>
         </div>
     </div> <!--#hero-->
@@ -75,8 +75,8 @@
         <div class="course">
             <img class="course-image" src="img/course1.jpg">
             <div class="course-info">
-                <h4>HTML5, CSS3, JavaScript for Beginners</h4>
-                <p>JP</p>
+                <h4>HTML5, CSS3, JavaScript for beginners</h4>
+                <p>Instructor Name</p>
                 <img src="img/stars.png">
                 <div class="price">
                     <p class="regular">$200</p>
@@ -88,7 +88,7 @@
         <div class="course">
             <img class="course-image" src="img/course2.jpg">
             <div class="course-info">
-                <h4>course de Comida Vegetariana</h4>
+                <h4>Vegan Food Course</h4>
                 <p>Instructor Name</p>
                 <img src="img/stars.png">
                 <div class="price">
@@ -104,24 +104,30 @@
                 <h4>Guitar for beginners</h4>
                 <p>Instructor Name</p>
                 <img src="img/stars.png">
-                <p class="price">$200 <span>$15</span></p>
+                <div class="price">
+                    <p class="regular">$200</p>
+                    <p class="offer">$15</p>
+                </div>
                 <a href="#" class="button">Add to Cart</a>
             </div>
         </div> <!--.course-->
         <div class="course">
             <img class="course-image" src="img/course4.jpg">
             <div class="course-info">
-                <h4>Huerto en tu casa</h4>
+                <h4>The Ultimate Guide for farming at home</h4>
                 <p>Instructor Name</p>
                 <img src="img/stars.png">
-                <p class="price">$200 <span>$15</span></p>
+                <div class="price">
+                    <p class="regular">$200</p>
+                    <p class="offer">$15</p>
+                </div>
                 <a href="#" class="button">Add to Cart</a>
             </div>
         </div> <!--.course-->
         <div class="course">
             <img class="course-image" src="img/course5.jpg">
             <div class="course-info">
-                <h4>Decoración con productos de tu hogar</h4>
+                <h4>Home Decoration for Beginners</h4>
                 <p>Instructor Name</p>
                 <img src="img/stars.png">
                 <div class="price">
@@ -134,7 +140,7 @@
         <div class="course">
             <img class="course-image" src="img/course1.jpg">
             <div class="course-info">
-                <h4>Diseño Web para Principiantes</h4>
+                <h4>Web Design for Developers</h4>
                 <p>Instructor Name</p>
                 <img src="img/stars.png">
                 <div class="price">
@@ -147,7 +153,7 @@
         <div class="course">
             <img class="course-image" src="img/course2.jpg">
             <div class="course-info">
-                <h4>Comida Mexicana para principiantes</h4>
+                <h4>Mexican Food for Beginners</h4>
                 <p>Instructor Name</p>
                 <img src="img/stars.png">
                 <div class="price">
@@ -160,7 +166,7 @@
         <div class="course">
             <img class="course-image" src="img/course3.jpg">
             <div class="course-info">
-                <h4>Estudio Musical en tu casa</h4>
+                <h4>Learn how to play guitar</h4>
                 <p>Instructor Name</p>
                 <img src="img/stars.png">
                 <div class="price">
@@ -173,7 +179,7 @@
         <div class="course">
             <img class="course-image" src="img/course4.jpg">
             <div class="course-info">
-                <h4>Cosecha tus propias frutas y verduras</h4>
+                <h4>Farm in your Home</h4>
                 <p>Instructor Name</p>
                 <img src="img/stars.png">
                 <div class="price">
@@ -186,40 +192,40 @@
         <div class="course">
             <img class="course-image" src="img/course5.jpg">
             <div class="course-info">
-                <h4>Prepara galletas caseras</h4>
+                <h4>10 Recipes for Christmas</h4>
                 <p>Instructor Name</p>
                 <img src="img/stars.png">
                 <div class="price">
                     <p class="regular">$200</p>
                     <p class="offer">$15</p>
                 </div>
-                <a href="#" class="button">Add to Cart</a>
+                <a href="#" class="button"">Add to Cart</a>
             </div>
         </div> <!--.course-->
         <div class=" course">
                     <img class="course-image" src="img/course1.jpg">
                     <div class="course-info">
-                        <h4>JavaScript Moderno con ES6</h4>
+                        <h4>Modern ES6 JavaScript</h4>
                         <p>Instructor Name</p>
                         <img src="img/stars.png">
                         <div class="price">
                             <p class="regular">$200</p>
                             <p class="offer">$15</p>
                         </div>
-                        <a href="#" class="button">Add to Cart</a>
+                        <a href="#" class="button"">Add to Cart</a>
             </div>
         </div> <!--.course-->
         <div class=" course">
                             <img class="course-image" src="img/course2.jpg">
                             <div class="course-info">
-                                <h4>100 Recetas de Comida Natural</h4>
+                                <h4>100 Natural Food Recipes</h4>
                                 <p>Instructor Name</p>
                                 <img src="img/stars.png">
                                 <div class="price">
                                     <p class="regular">$200</p>
                                     <p class="offer">$15</p>
                                 </div>
-                                <a href="#" class="button">Add to Cart</a>
+                                <a href="#" class="button"">Add to Cart</a>
             </div>
         </div> <!--.course-->
     </div>  <!--.course-list-->
